--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -811,6 +811,11 @@ a {
 .cid-sxX1wyHFsn .navbar.collapsed.opened .dropdown-menu {
   top: 0;
 }
+@media (min-width: 992px) {
+  .cid-sxX1wyHFsn .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4rem);
+  }
+}
 .cid-sxX1wyHFsn .navbar.collapsed .dropdown-menu .dropdown-submenu {
   left: 0 !important;
 }
